--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
     
 <div class="calc-container">
     <div class="display">
-        <div class="operator-display"></div>
+        <div class="top-display">
+            <div class="operator-display">
+            </div>
+        </div>
+
         <div class="number-display">number</div>
     </div>
     
             <div class="buttons">
 
                     <div class="row-one">
-                        <div class="key">C</div>
+                        <div class="clear">C</div>
                         <div class="num-key">7</div>
                         <div class="num-key">3</div>
                         <div class="num-key">1</div>
