--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
         </div>
 
-        <div class="number-display">number</div>
+        <div class="number-display">0</div>
     </div>
     
             <div class="buttons">
