basic input/output functionality working as intended. tweaks left include use of single decimal point only.

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                     <div class="row-one">
                         <div class="clear">C</div>
                         <div class="num-key">7</div>
-                        <div class="num-key">3</div>
+                        <div class="num-key">4</div>
                         <div class="num-key">1</div>
                         <div class="key">00</div>
                     </div>
                     
                     <div class="row-two">
-                        <div class="key">/</div>
+                        <div class="key">&divide</div>
                         <div class="num-key">8</div>
                         <div class="num-key">5</div>
                         <div class="num-key">2</div>
@@ -38,11 +38,11 @@
                     </div>
 
                     <div class="row-three">
-                        <div class="key">X</div>
+                        <div class="key">x</div>
                         <div class="num-key">9</div>
                         <div class="num-key">6</div>
                         <div class="num-key">3</div>
-                        <div class="key">.</div>
+                        <div class="num-key">.</div>
                     </div>
 
                     <div class="row-four">
