only a single decimal point allowed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
 
                     <div class="row-three">
-                        <div class="key">x</div>
+                        <div class="key">&times</div>
                         <div class="num-key">9</div>
                         <div class="num-key">6</div>
                         <div class="num-key">3</div>
