resolved conflict between listeners for equals and operator keys which caused the keyArray to store too many values and evaluate an incorrect result

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="buttons">
 
                     <div class="row-one">
-                        <div class="clear">C</div>
+                        <div class="clear">c</div>
                         <div class="num-key">7</div>
                         <div class="num-key">4</div>
                         <div class="num-key">1</div>
