backspace key. only works on single values, not operators.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <div class="num-key">7</div>
                         <div class="num-key">4</div>
                         <div class="num-key">1</div>
-                        <div class="key">00</div>
+                        <div class="num-key">00</div>
                     </div>
                     
                     <div class="row-two">
@@ -46,7 +46,7 @@
                     </div>
 
                     <div class="row-four">
-                        <div class="key">&lt;</div>
+                        <div class="go-back">&lt;</div>
                         <div class="key">-</div>
                         <div class="key">+</div>
                         <div class="equals">=</div>
