removed backspace, still buggy. implemented modulo operator

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
                     
                     <div class="row-two">
-                        <div class="key">&divide</div>
+                        <div class="key">&divide;</div>
                         <div class="num-key">8</div>
                         <div class="num-key">5</div>
                         <div class="num-key">2</div>
@@ -38,7 +38,7 @@
                     </div>
 
                     <div class="row-three">
-                        <div class="key">&times</div>
+                        <div class="key">&times;</div>
                         <div class="num-key">9</div>
                         <div class="num-key">6</div>
                         <div class="num-key">3</div>
@@ -46,7 +46,7 @@
                     </div>
 
                     <div class="row-four">
-                        <div class="go-back">&lt;</div>
+                        <div class="key">%</div>
                         <div class="key">-</div>
                         <div class="key">+</div>
                         <div class="equals">=</div>
